outputs/service-mesh/04-authz-default-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny
  namespace: mesh-demo
spec:
  {}
